# prototype-phd

./: .gitignore  LICENSE  README.md  core.html  index.html  makefile  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
nbs/: 16_ai_trust.ipynb  index.ipynb  nbdev.yml
prompt_templates/: ai_trust_game1.txt  ai_trust_game2.txt  ai_trust_game3.md  ai_trust_game3.txt
prototype-phd/: conditions.py  data_utils.py  methods.py  model_utils.py  models.py  payoffs.py  plot_utils.py  types.py  utils.py
prototype_phd/: _modidx.py  conditions.py  data_utils.py  methods.py  model_utils.py  models.py  payoffs.py  plot_utils.py  prompts.py  types.py  utils.py
prototype_phd/methods/: abm.py  egt.py
scripts/: ai_trust.py  ai_trust_fairgame_config_builder.py  ai_trust_llm.py
