[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prototype_phd"
version = "0.1.0"
description = "A library for AI Governance tools and models developed during a PhD."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT License" }
authors = [
    { name = "Paolo Bova", email = "paolobova@proton.me" }
]
keywords = ["AI Governance", "PhD", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

# Production dependencies: Minimal dependencies required for the package to run.
dependencies = [
    "more-itertools>=8.0",
    "nptyping>=1.4",
    "numpy>=1.18",
    "pandas>=1.0",
    "scipy>=1.4",
    "tqdm>=4.0",
    "matplotlib>=3.0",
    "plotly>=4.0",
]

[project.optional-dependencies]
# Development and testing dependencies: These are only required for development.
dev = [
    "ipykernel>=6.0",
    "jupyterlab>=3.0",
    "pytest>=6.0",
]

[project.urls]
Repository = "https://github.com/tofusplat/prototype-phd"
Documentation = "https://github.com/tofusplat/prototype-phd#readme"
IssueTracker = "https://github.com/tofusplat/prototype-phd/issues"