[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "prototype_phd"
version = "0.1.0"
description = "A library for AI Governance tools and models developed during a PhD."
readme = "README.md"
requires-python = "<3.14,>=3.10"
license = { text = "MIT License" }
authors = [
    { name = "Paolo Bova", email = "paolobova@proton.me" }
]
keywords = ["AI Governance", "PhD", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]

# Production dependencies: Minimal dependencies required for the package to run.
dependencies = [
    "more-itertools (>=10.6.0,<11.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "regex (>=2024.11.6,<2025.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "autogen (>=0.7.5,<0.8.0)",
    "pyautogen (>=0.7.5,<0.8.0)"
]

[project.optional-dependencies]
# Development and testing dependencies: These are only required for development.
dev = [
    "ipykernel>=6.0",
    "jupyterlab>=3.0",
    "pytest>=6.0",
]

[project.urls]
Repository = "https://github.com/tofusplat/prototype-phd"
Documentation = "https://github.com/tofusplat/prototype-phd#readme"
IssueTracker = "https://github.com/tofusplat/prototype-phd/issues"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"
jupyterlab = "^4.3.5"

